uk.ac.ucl.cs.generatedparser/ModelParser.java
// Generated from Model.g4 by ANTLR 4.4
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ModelParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__37=1, T__36=2, T__35=3, T__34=4, T__33=5, T__32=6, T__31=7, T__30=8, 
		T__29=9, T__28=10, T__27=11, T__26=12, T__25=13, T__24=14, T__23=15, T__22=16, 
		T__21=17, T__20=18, T__19=19, T__18=20, T__17=21, T__16=22, T__15=23, 
		T__14=24, T__13=25, T__12=26, T__11=27, T__10=28, T__9=29, T__8=30, T__7=31, 
		T__6=32, T__5=33, T__4=34, T__3=35, T__2=36, T__1=37, T__0=38, NOT=39, 
		AND=40, OR=41, HexLiteral=42, DecimalLiteral=43, OctalLiteral=44, FloatingPointLiteral=45, 
		CharacterLiteral=46, StringLiteral=47, Identifier=48, COMMENT=49, LINE_COMMENT=50, 
		NEWLINE=51, SINGLESPACE=52, WS=53;
	public static final String[] tokenNames = {
		"<INVALID>", "'/'", "'P'", "'decision'", "'!='", "'triangular'", "'{'", 
		"';'", "'}'", "'='", "'^'", "'deterministic'", "'<='", "'random'", "'E'", 
		"'('", "'Model'", "'*'", "','", "'margin'", "'Objective'", "'uniform'", 
		"'Min'", "':'", "'>='", "'geometric'", "'normal_ci'", "'=='", "'<'", "'with'", 
		"'>'", "'%'", "'normal'", "'percentile'", "')'", "'exponential'", "'+'", 
		"'-'", "'Max'", "NOT", "AND", "OR", "HexLiteral", "DecimalLiteral", "OctalLiteral", 
		"FloatingPointLiteral", "CharacterLiteral", "StringLiteral", "Identifier", 
		"COMMENT", "LINE_COMMENT", "NEWLINE", "SINGLESPACE", "WS"
	};
	public static final int
		RULE_model = 0, RULE_model_element = 1, RULE_objective_decl = 2, RULE_objective_def = 3, 
		RULE_quality_var_decl = 4, RULE_quality_var_def = 5, RULE_decision_def = 6, 
		RULE_decision_body = 7, RULE_option_name = 8, RULE_option_def = 9, RULE_parameter_def = 10, 
		RULE_distribution = 11, RULE_distribution_args = 12, RULE_distribution_arg = 13, 
		RULE_arithmetic_expr = 14, RULE_comparision = 15, RULE_number = 16, RULE_integerLiteral = 17, 
		RULE_optimisationDirection = 18, RULE_comparator = 19, RULE_var_name = 20;
	public static final String[] ruleNames = {
		"model", "model_element", "objective_decl", "objective_def", "quality_var_decl", 
		"quality_var_def", "decision_def", "decision_body", "option_name", "option_def", 
		"parameter_def", "distribution", "distribution_args", "distribution_arg", 
		"arithmetic_expr", "comparision", "number", "integerLiteral", "optimisationDirection", 
		"comparator", "var_name"
	};

	@Override
	public String getGrammarFileName() { return "Model.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ModelParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ModelContext extends ParserRuleContext {
		public List<Model_elementContext> model_element() {
			return getRuleContexts(Model_elementContext.class);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(ModelParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ModelParser.NEWLINE, i);
		}
		public Var_nameContext var_name() {
			return getRuleContext(Var_nameContext.class,0);
		}
		public Model_elementContext model_element(int i) {
			return getRuleContext(Model_elementContext.class,i);
		}
		public ModelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_model; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ModelVisitor ) return ((ModelVisitor<? extends T>)visitor).visitModel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModelContext model() throws RecognitionException {
		ModelContext _localctx = new ModelContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_model);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42); match(T__22);
			setState(43); var_name();
			setState(44); match(T__31);
			setState(48);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(45); match(NEWLINE);
				}
				}
				setState(50);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(54);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__18 || _la==Identifier) {
				{
				{
				setState(51); model_element();
				}
				}
				setState(56);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Model_elementContext extends ParserRuleContext {
		public Model_elementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_model_element; }
	 
		public Model_elementContext() { }
		public void copyFrom(Model_elementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ModelObjectiveListContext extends Model_elementContext {
		public List<Objective_declContext> objective_decl() {
			return getRuleContexts(Objective_declContext.class);
		}
		public Objective_declContext objective_decl(int i) {
			return getRuleContext(Objective_declContext.class,i);
		}
		public ModelObjectiveListContext(Model_elementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ModelVisitor ) return ((ModelVisitor<? extends T>)visitor).visitModelObjectiveList(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ModelQualityVariableListContext extends Model_elementContext {
		public Quality_var_declContext quality_var_decl(int i) {
			return getRuleContext(Quality_var_declContext.class,i);
		}
		public List<Quality_var_declContext> quality_var_decl() {
			return getRuleContexts(Quality_var_declContext.class);
		}
		public ModelQualityVariableListContext(Model_elementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ModelVisitor ) return ((ModelVisitor<? extends T>)visitor).visitModelQualityVariableList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Model_elementContext model_element() throws RecognitionException {
		Model_elementContext _localctx = new Model_elementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_model_element);
		try {
			int _alt;
			setState(67);
			switch (_input.LA(1)) {
			case T__18:
				_localctx = new ModelObjectiveListContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(58); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(57); objective_decl();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(60); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case Identifier:
				_localctx = new ModelQualityVariableListContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(63); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(62); quality_var_decl();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(65); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Objective_declContext extends ParserRuleContext {
		public OptimisationDirectionContext optimisationDirection() {
			return getRuleContext(OptimisationDirectionContext.class,0);
		}
		public NumberContext number() {
			return getRuleContext(NumberContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(ModelParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ModelParser.NEWLINE, i);
		}
		public Var_nameContext var_name() {
			return getRuleContext(Var_nameContext.class,0);
		}
		public Objective_defContext objective_def() {
			return getRuleContext(Objective_defContext.class,0);
		}
		public Objective_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_objective_decl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ModelVisitor ) return ((ModelVisitor<? extends T>)visitor).visitObjective_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Objective_declContext objective_decl() throws RecognitionException {
		Objective_declContext _localctx = new Objective_declContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_objective_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69); match(T__18);
			setState(70); optimisationDirection();
			setState(71); var_name();
			setState(74);
			_la = _input.LA(1);
			if (_la==T__29) {
				{
				setState(72); match(T__29);
				setState(73); objective_def();
				}
			}

			setState(80);
			_la = _input.LA(1);
			if (_la==T__9) {
				{
				setState(76); match(T__9);
				setState(77); number();
				setState(78); match(T__19);
				}
			}

			setState(82); match(T__31);
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(83); match(NEWLINE);
				}
				}
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Objective_defContext extends ParserRuleContext {
		public Objective_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_objective_def; }
	 
		public Objective_defContext() { }
		public void copyFrom(Objective_defContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ObjectiveBooleanProbabilityContext extends Objective_defContext {
		public Var_nameContext var_name() {
			return getRuleContext(Var_nameContext.class,0);
		}
		public List<TerminalNode> SINGLESPACE() { return getTokens(ModelParser.SINGLESPACE); }
		public TerminalNode SINGLESPACE(int i) {
			return getToken(ModelParser.SINGLESPACE, i);
		}
		public ObjectiveBooleanProbabilityContext(Objective_defContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ModelVisitor ) return ((ModelVisitor<? extends T>)visitor).visitObjectiveBooleanProbability(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ObjectiveExpectationContext extends Objective_defContext {
		public Var_nameContext var_name() {
			return getRuleContext(Var_nameContext.class,0);
		}
		public List<TerminalNode> SINGLESPACE() { return getTokens(ModelParser.SINGLESPACE); }
		public TerminalNode SINGLESPACE(int i) {
			return getToken(ModelParser.SINGLESPACE, i);
		}
		public ObjectiveExpectationContext(Objective_defContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ModelVisitor ) return ((ModelVisitor<? extends T>)visitor).visitObjectiveExpectation(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ObjectivePercentileContext extends Objective_defContext {
		public IntegerLiteralContext integerLiteral() {
			return getRuleContext(IntegerLiteralContext.class,0);
		}
		public Var_nameContext var_name() {
			return getRuleContext(Var_nameContext.class,0);
		}
		public List<TerminalNode> SINGLESPACE() { return getTokens(ModelParser.SINGLESPACE); }
		public TerminalNode SINGLESPACE(int i) {
			return getToken(ModelParser.SINGLESPACE, i);
		}
		public ObjectivePercentileContext(Objective_defContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ModelVisitor ) return ((ModelVisitor<? extends T>)visitor).visitObjectivePercentile(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ObjectiveProbabilityContext extends Objective_defContext {
		public ComparisionContext comparision() {
			return getRuleContext(ComparisionContext.class,0);
		}
		public List<TerminalNode> SINGLESPACE() { return getTokens(ModelParser.SINGLESPACE); }
		public TerminalNode SINGLESPACE(int i) {
			return getToken(ModelParser.SINGLESPACE, i);
		}
		public ObjectiveProbabilityContext(Objective_defContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ModelVisitor ) return ((ModelVisitor<? extends T>)visitor).visitObjectiveProbability(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Objective_defContext objective_def() throws RecognitionException {
		Objective_defContext _localctx = new Objective_defContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_objective_def);
		int _la;
		try {
			setState(135);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				_localctx = new ObjectiveExpectationContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(89); match(T__24);
				setState(93);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SINGLESPACE) {
					{
					{
					setState(90); match(SINGLESPACE);
					}
					}
					setState(95);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(96); match(T__23);
				setState(97); var_name();
				setState(98); match(T__4);
				}
				break;
			case 2:
				_localctx = new ObjectiveBooleanProbabilityContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(100); match(T__36);
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SINGLESPACE) {
					{
					{
					setState(101); match(SINGLESPACE);
					}
					}
					setState(106);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(107); match(T__23);
				setState(108); var_name();
				setState(109); match(T__4);
				}
				break;
			case 3:
				_localctx = new ObjectiveProbabilityContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(111); match(T__36);
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SINGLESPACE) {
					{
					{
					setState(112); match(SINGLESPACE);
					}
					}
					setState(117);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(118); match(T__23);
				setState(119); comparision();
				setState(120); match(T__4);
				}
				break;
			case 4:
				_localctx = new ObjectivePercentileContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(122); match(T__5);
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==SINGLESPACE) {
					{
					{
					setState(123); match(SINGLESPACE);
					}
					}
					setState(128);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(129); match(T__23);
				setState(130); integerLiteral();
				setState(131); match(T__20);
				setState(132); var_name();
				setState(133); match(T__4);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Quality_var_declContext extends ParserRuleContext {
		public Quality_var_defContext quality_var_def() {
			return getRuleContext(Quality_var_defContext.class,0);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(ModelParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ModelParser.NEWLINE, i);
		}
		public Var_nameContext var_name() {
			return getRuleContext(Var_nameContext.class,0);
		}
		public Quality_var_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_quality_var_decl; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ModelVisitor ) return ((ModelVisitor<? extends T>)visitor).visitQuality_var_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Quality_var_declContext quality_var_decl() throws RecognitionException {
		Quality_var_declContext _localctx = new Quality_var_declContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_quality_var_decl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(137); var_name();
			setState(138); match(T__29);
			setState(139); quality_var_def();
			setState(143);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(140); match(NEWLINE);
				}
				}
				setState(145);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Quality_var_defContext extends ParserRuleContext {
		public Quality_var_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_quality_var_def; }
	 
		public Quality_var_defContext() { }
		public void copyFrom(Quality_var_defContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class QualityVariableDecisionContext extends Quality_var_defContext {
		public Decision_defContext decision_def() {
			return getRuleContext(Decision_defContext.class,0);
		}
		public QualityVariableDecisionContext(Quality_var_defContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ModelVisitor ) return ((ModelVisitor<? extends T>)visitor).visitQualityVariableDecision(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class QualityVariableArithmeticContext extends Quality_var_defContext {
		public Arithmetic_exprContext arithmetic_expr() {
			return getRuleContext(Arithmetic_exprContext.class,0);
		}
		public QualityVariableArithmeticContext(Quality_var_defContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ModelVisitor ) return ((ModelVisitor<? extends T>)visitor).visitQualityVariableArithmetic(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class QualityVariableParameterContext extends Quality_var_defContext {
		public Parameter_defContext parameter_def() {
			return getRuleContext(Parameter_defContext.class,0);
		}
		public QualityVariableParameterContext(Quality_var_defContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ModelVisitor ) return ((ModelVisitor<? extends T>)visitor).visitQualityVariableParameter(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Quality_var_defContext quality_var_def() throws RecognitionException {
		Quality_var_defContext _localctx = new Quality_var_defContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_quality_var_def);
		try {
			setState(153);
			switch (_input.LA(1)) {
			case T__35:
				_localctx = new QualityVariableDecisionContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(146); decision_def();
				}
				break;
			case T__23:
			case T__2:
			case T__1:
			case NOT:
			case HexLiteral:
			case DecimalLiteral:
			case OctalLiteral:
			case FloatingPointLiteral:
			case Identifier:
			case NEWLINE:
			case WS:
				_localctx = new QualityVariableArithmeticContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(147); arithmetic_expr(0);
				setState(148); match(T__31);
				}
				break;
			case T__33:
			case T__27:
			case T__25:
			case T__17:
			case T__13:
			case T__12:
			case T__6:
			case T__3:
				_localctx = new QualityVariableParameterContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(150); parameter_def();
				setState(151); match(T__31);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Decision_defContext extends ParserRuleContext {
		public Decision_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decision_def; }
	 
		public Decision_defContext() { }
		public void copyFrom(Decision_defContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DecisionXORContext extends Decision_defContext {
		public Decision_bodyContext decision_body() {
			return getRuleContext(Decision_bodyContext.class,0);
		}
		public DecisionXORContext(Decision_defContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ModelVisitor ) return ((ModelVisitor<? extends T>)visitor).visitDecisionXOR(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Decision_defContext decision_def() throws RecognitionException {
		Decision_defContext _localctx = new Decision_defContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_decision_def);
		try {
			_localctx = new DecisionXORContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(155); match(T__35);
			setState(156); decision_body();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Decision_bodyContext extends ParserRuleContext {
		public Token decision_Name;
		public Option_nameContext option_name(int i) {
			return getRuleContext(Option_nameContext.class,i);
		}
		public List<Option_defContext> option_def() {
			return getRuleContexts(Option_defContext.class);
		}
		public Option_defContext option_def(int i) {
			return getRuleContext(Option_defContext.class,i);
		}
		public TerminalNode StringLiteral() { return getToken(ModelParser.StringLiteral, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(ModelParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(ModelParser.NEWLINE, i);
		}
		public List<Option_nameContext> option_name() {
			return getRuleContexts(Option_nameContext.class);
		}
		public Decision_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decision_body; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ModelVisitor ) return ((ModelVisitor<? extends T>)visitor).visitDecision_body(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Decision_bodyContext decision_body() throws RecognitionException {
		Decision_bodyContext _localctx = new Decision_bodyContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_decision_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158); match(T__23);
			setState(159); ((Decision_bodyContext)_localctx).decision_Name = match(StringLiteral);
			setState(160); match(T__4);
			setState(161); match(T__32);
			setState(169); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(162); option_name();
				setState(163); match(T__15);
				setState(164); option_def();
				setState(165); match(T__31);
				setState(167);
				_la = _input.LA(1);
				if (_la==NEWLINE) {
					{
					setState(166); match(NEWLINE);
					}
				}

				}
				}
				setState(171); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==StringLiteral );
			setState(173); match(T__30);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
